RM-1422 fixed Firefox Textarea height and scrollbars
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@13973 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/HTML/BocMultilineTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/HTML/BocMultilineTextValue.css
@@ -16,4 +16,7 @@
 .bocMultilineTextValue textarea
 {
   font-size: 100%;
+  overflow-y: scroll;
+  
+  overflow-x: hidden;
 }
